[gd_scene load_steps=9 format=3 uid="uid://b1bi6doj50har"]

[ext_resource type="PackedScene" uid="uid://b06fofkojjj37" path="res://classes/landing-pad/repair-ui/RepairUi2d.tscn" id="1_0cnma"]
[ext_resource type="Script" path="res://classes/landing-pad/repair-ui/repair_ui.gd" id="1_ivklh"]
[ext_resource type="Script" path="res://classes/interactable/interaction-button/InteractionButton.gd" id="2_hkmx1"]
[ext_resource type="FontFile" uid="uid://bm53fppaujf5v" path="res://ui/font/Pixeled.ttf" id="3_qbdml"]

[sub_resource type="ViewportTexture" id="ViewportTexture_464ik"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4yslk"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.52549, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_w2nf3"]
material = SubResource("StandardMaterial3D_4yslk")
size = Vector3(3.195, 0.785, 0.025)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_5g1ls"]
data = PackedVector3Array(-1.5975, 0.3925, 0.0125, 1.5975, 0.3925, 0.0125, -1.5975, -0.3925, 0.0125, 1.5975, 0.3925, 0.0125, 1.5975, -0.3925, 0.0125, -1.5975, -0.3925, 0.0125, 1.5975, 0.3925, -0.0125, -1.5975, 0.3925, -0.0125, 1.5975, -0.3925, -0.0125, -1.5975, 0.3925, -0.0125, -1.5975, -0.3925, -0.0125, 1.5975, -0.3925, -0.0125, 1.5975, 0.3925, 0.0125, 1.5975, 0.3925, -0.0125, 1.5975, -0.3925, 0.0125, 1.5975, 0.3925, -0.0125, 1.5975, -0.3925, -0.0125, 1.5975, -0.3925, 0.0125, -1.5975, 0.3925, -0.0125, -1.5975, 0.3925, 0.0125, -1.5975, -0.3925, -0.0125, -1.5975, 0.3925, 0.0125, -1.5975, -0.3925, 0.0125, -1.5975, -0.3925, -0.0125, 1.5975, 0.3925, 0.0125, -1.5975, 0.3925, 0.0125, 1.5975, 0.3925, -0.0125, -1.5975, 0.3925, 0.0125, -1.5975, 0.3925, -0.0125, 1.5975, 0.3925, -0.0125, -1.5975, -0.3925, 0.0125, 1.5975, -0.3925, 0.0125, -1.5975, -0.3925, -0.0125, 1.5975, -0.3925, 0.0125, 1.5975, -0.3925, -0.0125, -1.5975, -0.3925, -0.0125)

[node name="RepairUi" type="Node3D" node_paths=PackedStringArray("repair_ui_2d")]
script = ExtResource("1_ivklh")
repair_ui_2d = NodePath("SubViewport/RepairUi2d")

[node name="Sprite3D" type="Sprite3D" parent="."]
texture = SubResource("ViewportTexture_464ik")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size_2d_override_stretch = true

[node name="RepairUi2d" parent="SubViewport" instance=ExtResource("1_0cnma")]

[node name="InteractionButton" type="StaticBody3D" parent="."]
collision_layer = 536870912
collision_mask = 536870912
script = ExtResource("2_hkmx1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="InteractionButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.110527, 0)
mesh = SubResource("BoxMesh_w2nf3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.110527, 0)
shape = SubResource("ConcavePolygonShape3D_5g1ls")

[node name="Label3D" type="Label3D" parent="InteractionButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.213287, 0.0148309)
outline_modulate = Color(0, 0, 0, 0)
text = "Repair"
font = ExtResource("3_qbdml")
font_size = 76

[connection signal="interacted" from="InteractionButton" to="." method="_on_interaction_button_interacted"]
